syntax = "proto3";

package pb;

import "billboard.proto";

option go_package = "github.com/ebukacodes21/soleluxury-server/pb";

message CreateBillboardRequest {
    int64 store_id = 1;
    string label = 2;
    string image_url = 3;
}

message CreateBillboardResponse {
    Billboard billboard = 1;
}